# QuestAI

./: .gitignore  README.md
backend/: database.db  main.py  pyproject.toml  requirements.txt
backend/core/: config.py  models.py  story_generator.py
backend/db/: database.py
backend/models/: job.py  story.py
backend/routers/: job.py  story.py
backend/schemas/: job.py  story.py
frontend/: .gitignore  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  util.js
frontend/src/components/: StoryGame.jsx  StoryGenerator.jsx  StoryLoader.jsx  ThemeInput.jsx
